Refactor project structure and improve organization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,36 @@
+# VCPKG NOTE:
+#   configure VCPKG_TARGET_TRIPLET somewhere (either through extension setting
+#   or `SET(...)`) prior to the project directive to ensure correct libraries
+#   are linked by triplet (e.g., x64-<platform>[-static])
+
 cmake_minimum_required(VERSION 3.27)
-project("advent-of-code" LANGUAGES CXX)
+project("aoc2023" VERSION 0.1.0)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 
 file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/.clang-tidy" "Checks: '-*'")
 
-set(executables "")
-set(AOC_HEADER_FILES
-    "include/aoc/digits.hpp"
-)
+# =======
+# OPTIONS
+# =======
 
-add_executable(
-    aoc_test
-    "tests/decode_test.cpp"
-    "tests/stringutils_test.cpp"
-)
-list(APPEND executables aoc_test)
+option(AOC_BUILD_TESTS "Build project tests" OFF)
+
+add_subdirectory(libaoc)
+if (AOC_BUILD_TESTS)
+    message(STATUS "Generating tests")
+    enable_testing()
+    add_subdirectory(tests)
+endif()
+
+# =========
+# SOLUTIONS
+# =========
+
+set(executables "")
+
 add_executable(day1 "src/day1.cpp")
 list(APPEND executables day1)
 add_executable(day2 "src/day2.cpp")
@@ -26,41 +40,26 @@ list(APPEND executables day3)
 add_executable(day4 "src/day4.cpp")
 list(APPEND executables day4)
 
-# copy input data files
+# ==========
+# INPUT DATA
+# ==========
+
 add_custom_target(copy-data
     COMMAND
-    ${CMAKE_COMMAND} -E copy_directory "${CMAKE_SOURCE_DIR}" "${CMAKE_BINARY_DIR}"
+    ${CMAKE_COMMAND} -E copy_directory "${CMAKE_SOURCE_DIR}/data" "${CMAKE_BINARY_DIR}/data"
 )
 
-foreach(exe IN LISTS executables)
-    # includes
-    target_include_directories(${exe} PRIVATE
-        "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>"
-    )
+# ==========
+# EXE CONFIG
+# ==========
 
-    # compiler specific options
+foreach(exe IN LISTS executables)
     if(MSVC)
-        # use static runtime linking on msvc
-        set_property(TARGET ${exe}
-            PROPERTY
-                MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>"
-        )
         target_compile_options(${exe} PRIVATE /W4 /WX)
     else()
         target_compile_options(${exe} PRIVATE -Wall -Wextra -Wpedantic -Werror)
     endif()
-    add_dependencies(${exe} copy-data)
-endforeach()
 
-# testing
-enable_testing()
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-find_package("GTest" CONFIG REQUIRED)
-target_link_libraries(
-  aoc_test
-  GTest::gtest
-  GTest::gtest_main
-)
-# add tests to cmake
-include(GoogleTest)
-gtest_add_tests(TARGET aoc_test)
+    add_dependencies(${exe} copy-data)
+    target_link_libraries(${exe} libaoc::libaoc)
+endforeach()
