--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required(VERSION 3.27)
-project(aoc_tests VERSION 0.1.0)
+project(libaoc_tests)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 
 add_executable(${PROJECT_NAME}
     "decode_test.cpp"
@@ -28,10 +27,10 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 find_package("GTest" CONFIG REQUIRED)
 
 target_link_libraries(
-  ${PROJECT_NAME}
-  libaoc::libaoc
-  GTest::gtest
-  GTest::gtest_main
+    ${PROJECT_NAME}
+    libaoc::libaoc
+    GTest::gtest
+    GTest::gtest_main
 )
 
 # add tests to cmake
