Add grid class to library

--- a/libaoc/CMakeLists.txt
+++ b/libaoc/CMakeLists.txt
@@ -23,17 +23,22 @@ target_precompile_headers(${PROJECT_NAME}
         "<array>"
         "<algorithm>"
         "<cctype>"
+        "<cstddef>"
+        "<cstdint>"
         "<filesystem>"
         "<fstream>"
         "<iostream>"
         "<optional>"
         "<ostream>"
+        "<queue>"
         "<ranges>"
         "<source_location>"
         "<string>"
         "<string_view>"
         "<sstream>"
         "<vector>"
+        "<unordered_map>"
+        "<unordered_set>"
         "<utility>"
 )
 
